--- a/emotion_detection_baseline_vs_hpo.ipynb
+++ b/emotion_detection_baseline_vs_hpo.ipynb
@@ -1320,9 +1320,7 @@
       "source": [
         "## 5. Model Comparison\n",
         "\n",
-        "We compare the baseline and optimized models in terms of accuracy and visualize the result. \n",
-        "\n",
-        "TR Macro-F1 result on XLM-R HPO was predicted. Not measured due to run time error."
+        "We compare the baseline and optimized models in terms of accuracy and visualize the result. \n"
       ]
     },
     {
